Three Sum Implementation.